<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgraund" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button9"
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:layout_marginLeft="15dp"
            android:text="@string/Gaza" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/button10"
                android:layout_width="144dp"
                android:layout_height="144dp"
                android:text="@string/North_Gaza" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button7"
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:layout_marginLeft="15dp"
            android:text="@string/Middle_Gaza" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/button8"
                android:layout_width="144dp"
                android:layout_height="144dp"
                android:text="@string/Khan_Yunis" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button5"
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:layout_marginLeft="15dp"
            android:text="@string/Rafah"
            style="@style/AppBaseTheme"
             />

        <Button
            android:id="@+id/button6"
            android:layout_width="144dp"
            android:layout_height="144dp" 
            style="@style/AppBaseTheme"
            android:text="@string/rss"/>
    </LinearLayout>

</LinearLayout>